Parameterized the files and the configuration from the docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,9 +6,9 @@ ENV PYTHONBUFFERED 1
 COPY requirements.txt /requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /requirements.txt
 COPY backend /code/backend/
-COPY data /data
+#COPY data /data
 
-ENV GRAPH_FILE=/data/graph_xdd.pickle
+ENV GRAPH_FILE=/data/graph_jun06_2022.pickle
 ENV IMPACT_FACTORS=/data/journal_rankings.pickle
 ENV RECORDS_DB=/data/records.db
 ENV ES_INDEX=frailty_001
