--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,20 @@ services:
   backend:
     build:
       context: ./backend
+    volumes:
+      - ./data:/data
     ports:
-      - "1601:1601"
-    command: uvicorn backend.start:app --host 0.0.0.0 --port 1601
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
+    command: uvicorn backend.start:app --host 0.0.0.0 --port ${BACKEND_PORT}
 
   frontend:
     build:
       context: ./frontend
+      args:
+        - BACKEND_PORT=${BACKEND_PORT}
+        - BACKEND_HOST=${BACKEND_HOST}
     ports:
-      - "3000:3000"
+      - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     depends_on:
       - backend
-    environment:
-    - PORT=3000
-    - REACT_APP_BACKEND_PORT=1601
-    command: npm start
+    command: serve -p ${FRONTEND_PORT} build/
