--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "better-react-mathjax": "^1.0.3",
     "bootstrap": "^5.1.3",
     "color": "^4.2.3",
@@ -25,10 +23,14 @@
     "react-bootstrap-typeahead": "^6.0.0-alpha.7",
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router": "^6.2.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.7",
+    "redux": "^4.2.0",
     "sass": "^1.49.9",
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
@@ -62,6 +64,13 @@
     "mini-css-extract-plugin": "2.4.5"
   },
   "devDependencies": {
-    "mini-css-extract-plugin": "2.4.5"
+    "@types/d3": "^7.4.0",
+    "@types/d3-sankey": "^0.11.2",
+    "@types/jest": "^28.1.5",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "mini-css-extract-plugin": "2.4.5",
+    "typescript": "^4.7.4"
   }
 }
