--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "mini-css-extract-plugin": "2.4.5"
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "@types/d3": "^7.4.0",
     "@types/d3-sankey": "^0.11.2",
     "@types/jest": "^28.1.5",
