--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
