--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "better-react-mathjax": "^1.0.3",
     "bootstrap": "^5.1.3",
+    "color": "^4.2.3",
     "cytoscape": "^3.20.0",
     "cytoscape-klay": "^3.1.4",
     "d3": "^7.3.0",
