--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,6 @@
     "itertools": "^1.7.1",
     "mathjax": "^3.2.0",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.1.1",
     "react-bootstrap-range-slider": "^3.0.3",
     "react-bootstrap-typeahead": "^6.0.0-alpha.7",
@@ -69,8 +68,9 @@
     "@types/d3-sankey": "^0.11.2",
     "@types/jest": "^28.1.5",
     "@types/node": "^18.0.4",
-    "@types/react": "^18.0.15",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "mini-css-extract-plugin": "2.4.5",
     "typescript": "^4.7.4"
   }
