--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl":  "http://localhost:1601/api",
-  "vizApiUrl": "http://localhost:1601/viz_api"
+  "apiUrl":  "http://dillon.cyverse.org:1601/api",
+  "vizApiUrl": "http://dillon.cyverse.org/viz_api"
 }
