Integrated the API

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GRAPH_FILE=data/graph_xdd.pickle
 IMPACT_FACTORS=data/journal_rankings.pickle
 RECORDS_DB=data/records.db
 ES_INDEX=frailty_001
+CONN_STRING=data/saiful.db
